# ai-tg-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/ai/: mod.rs  openai.rs
src/bot/: mod.rs
src/models/: mod.rs
